# assets-metadata-remover

./: .gitignore  CHANGELOG.md  Makefile  README.md  metadata_remover.py  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: ci.yml  release.yml
src/metadata_remover/: __init__.py  cli.py  formatters.py  metadata.py  utils.py
